--- a/07_projects/07_typing/07.html
+++ b/07_projects/07_typing/07.html
@@ -7,17 +7,17 @@
     <title>Typing Speed Test</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: Arial;
             text-align: center;
             margin: 50px;
-            background-color: black;
+            background-color: rgb(46, 40, 40);
             color: white;
         }
 
         #text-display {
             font-size: 20px;
             margin-bottom: 20px;
-            background-color: black;
+            background-color: rgb(46, 40, 40);
             color: white;
         }
 
@@ -25,7 +25,7 @@
             width: 80%;
             height: 100px;
             font-size: 18px;
-            background-color: black;
+            background-color: rgb(46, 40, 40);
             color: white;
         }
 
@@ -33,7 +33,7 @@
         #wpm {
             font-size: 18px;
             margin-top: 10px;
-            background-color: black;
+            background-color: rgb(46, 40, 40);
             color: white;
         }
 
@@ -41,7 +41,7 @@
             padding: 10px 20px;
             font-size: 16px;
             cursor: pointer;
-            background-color: black;
+            background-color: rgb(46, 40, 40);
             color: white;
         }
     </style>
@@ -111,8 +111,6 @@
         typingArea.value = "";
     });
 
-
-    const apl = [[1, 2], ['a']]
 </script>
 
 </html>
